--- a/HiveGameClient/HiveGameWPFApp/MainWindow.xaml
+++ b/HiveGameClient/HiveGameWPFApp/MainWindow.xaml
@@ -8,36 +8,27 @@
 
     <Window.Resources>
         <Storyboard x:Key="FadeOutAnimation">
-            <DoubleAnimation Storyboard.TargetProperty="Opacity"
-                             From="1" To="0" Duration="0:0:1.5" />
+            <DoubleAnimation Storyboard.TargetProperty="Opacity" From="1" To="0" Duration="0:0:1.5" />
         </Storyboard>
 
         <Storyboard x:Key="FadeInAnimation">
-            <DoubleAnimation Storyboard.TargetProperty="Opacity"
-                             From="0" To="1" Duration="0:0:1.5" />
+            <DoubleAnimation Storyboard.TargetProperty="Opacity" From="0" To="1" Duration="0:0:1.5" />
         </Storyboard>
     </Window.Resources>
 
     <Viewbox Stretch="Fill">
         <Grid Height="720" Width="1280">
-            <MediaElement x:Name="IntroVideo" 
-                          LoadedBehavior="Play" 
-                          UnloadedBehavior="Stop"
-                          Source="Video/loadingScreen.mp4"
-                          Volume="0.1"
-                          Stretch="Fill"
+            <MediaElement x:Name="me_IntroVideo" LoadedBehavior="Play" 
+                          UnloadedBehavior="Stop"  Source="Video/loadingScreen.mp4"
+                          Volume="0.1" Stretch="Fill"
                           MediaEnded="IntroVideo_MediaEnded"/>
 
-            <Frame x:Name="NavigationFrame" 
-                   NavigationUIVisibility="Hidden"
-                   Opacity="1"
-                   Navigating="NavigationFrame_Navigating"
+            <Frame x:Name="NavigationFrame" NavigationUIVisibility="Hidden"
+                   Opacity="1" Navigating="NavigationFrame_Navigating"
                    Navigated="NavigationFrame_Navigated" />
 
-            <MediaElement x:Name="BackgroundMusicPlayer"
-                          LoadedBehavior="Manual"
-                          UnloadedBehavior="Stop"
-                          Volume="0.09"
+            <MediaElement x:Name="me_BackgroundMusicPlayer" LoadedBehavior="Manual"
+                          UnloadedBehavior="Stop" Volume="0.09"
                           IsHitTestVisible="False"
                           MediaEnded="BackgroundMusicPlayer_MediaEnded"/>
         </Grid>
