--- a/HiveGameClient/HiveGameWPFApp/Views/RegisterView.xaml
+++ b/HiveGameClient/HiveGameWPFApp/Views/RegisterView.xaml
@@ -40,7 +40,8 @@
                                      Background="#1C1C1C"
                                      Foreground="White"
                                      BorderThickness="0"
-                                     Padding="5" Margin="-1,0,1,0">
+                                     Padding="5" Margin="-1,0,1,0"
+                                     TabIndex="2">
                                 <PasswordBox.Effect>
                                     <DropShadowEffect Color="Black" ShadowDepth="3" Opacity="0.5" BlurRadius="10" />
                                 </PasswordBox.Effect>
@@ -92,7 +93,8 @@
                                      Background="#1C1C1C"
                                      Foreground="White"
                                      BorderThickness="0"
-                                     Padding="5">
+                                     Padding="5"
+                                     TabIndex="3">
                                 <PasswordBox.Effect>
                                     <DropShadowEffect Color="Black" ShadowDepth="3" Opacity="0.5" BlurRadius="10" />
                                 </PasswordBox.Effect>
@@ -165,7 +167,8 @@
                          BorderBrush="#FFC300"
                          BorderThickness="2"
                          Padding="5"
-                         FontSize="16">
+                         FontSize="16"
+                         TabIndex="0">
                         <TextBox.Effect>
                             <DropShadowEffect Color="Black" ShadowDepth="3" Opacity="0.5" BlurRadius="10" />
                         </TextBox.Effect>
@@ -190,7 +193,8 @@
                          BorderBrush="#FFC300"
                          BorderThickness="2"
                          Padding="5"
-                         FontSize="16">
+                         FontSize="16"
+                             TabIndex="1">
                         <TextBox.Effect>
                             <DropShadowEffect Color="Black" ShadowDepth="3" Opacity="0.5" BlurRadius="10" />
                         </TextBox.Effect>
@@ -211,11 +215,15 @@
                        RenderTransformOrigin="0.5,0.506" />
 
                     <Button x:Name="btn_CreateAccount" Content="{x:Static p:Resources.btn_CreateAccount}"
-                        Width="348" Height="36" FontSize="24"
-                        Background="#FFC300" Foreground="Black"
+                        Width="348" Height="53" FontSize="30" FontFamily="Impact"
+                         Foreground="Black"
                         HorizontalAlignment="Center" VerticalAlignment="Top"
                         Margin="0,556,0,0" RenderTransformOrigin="0.5,0.393"
-                        Click="BtnCreateAccount_Click" Cursor="" />
+                        Click="BtnCreateAccount_Click" Cursor="" TabIndex="4">
+                        <Button.Background>
+                        <ImageBrush ImageSource="/Images/Icons/ButtonsIcon.png" Stretch="Fill"/>
+                        </Button.Background>
+                    </Button>
                 </Grid>
             </Grid>
         </ScrollViewer>
